Extended naming method, so it can take whatever name as template and append number if needed

--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -175,6 +175,13 @@
             </interactivity:Interaction.Behaviors>
         </controls:AdaptiveGridView>
 
+        <InfoBar Grid.Row="1"
+                 Margin="0 0 6 6"
+                 IsOpen="True" Severity="Informational"
+                 Background="{ThemeResource MenuFlyoutItemFocusedBackgroundThemeBrush}"
+                 Title="Copied successfully" VerticalAlignment="Bottom" HorizontalAlignment="Right" >
+        </InfoBar>
+
         <interactivity:Interaction.Behaviors>
             <!--TODO: HotKey2 Del - Delete item-->
             <toolkitBehaviors:KeyDownTriggerBehavior Key="Delete">
