Fixed renaming for an item Now user gets message when item's name is illegal. Prevented double renaming (by pressing key and losing focus at the same time). Moved deciding logic into separate method.

--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -43,7 +43,7 @@
                                     />
 
                                 <behaviors:LostFocusBehavior 
-                                    Command="{StaticResource EndRenamingCommand}"
+                                    Command="{StaticResource EndRenamingIfLostFocusCommand}"
                                     CommandParameter="{x:Bind}"
                                     />
 
