--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -183,7 +183,10 @@
                  Margin="0 0 6 6"
                  IsOpen="{x:Bind ViewModel.HasCopiedFiles, Mode=OneWay}" Severity="Informational"
                  Background="{ThemeResource MenuFlyoutItemFocusedBackgroundThemeBrush}"
-                 Title="Copied successfully" VerticalAlignment="Bottom" HorizontalAlignment="Right" >
+                 Title="Copied successfully" VerticalAlignment="Bottom" HorizontalAlignment="Right">
+            <interactivity:Interaction.Behaviors>
+                <behaviors:InfoBarBehavior IsOpen="{x:Bind ViewModel.HasCopiedFiles, Mode=OneWay}" />
+            </interactivity:Interaction.Behaviors>
         </InfoBar>
 
         <interactivity:Interaction.Behaviors>
