Changed old api elements to new and better Now app uses Windows.Storage namespace to execute different file operations

--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -132,7 +132,7 @@
                 <Button 
                     Style="{StaticResource MenuButton}"
                     Command="{x:Bind ViewModel.DeleteSelectedItemsCommand}"
-                    ToolTipService.ToolTip="Delete"
+                    ToolTipService.ToolTip="DeleteAsync"
                     ToolTipService.Placement="Bottom">
                     <FontIcon FontSize="17" Glyph="&#xE74D;" />
                 </Button>
