Copy logic is now working
First version of coping files is now operational. User cannot cut files for now.

--- a/FileExplorer/MainWindow.xaml
+++ b/FileExplorer/MainWindow.xaml
@@ -10,7 +10,7 @@
     mc:Ignorable="d">
 
     <views:WindowExtended.SystemBackdrop>
-        <MicaBackdrop />
+        <DesktopAcrylicBackdrop />
     </views:WindowExtended.SystemBackdrop>
 
 </views:WindowExtended>
