Integrated file wrappers to system Now any operation uses wrappers. Wrappers might still use slow StorageItems to get icons This is still raw version without delete, rename or create. But now system is more scalable  and wrappers can decide how they are named created or deleted on their own

--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -18,7 +18,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.Resources>
-        <DataTemplate x:Key="GridItemTemplate" x:DataType="models:DirectoryItemModel">
+        <DataTemplate x:Key="GridItemTemplate" x:DataType="models:DirectoryItemWrapper">
             <StackPanel  Padding="10  20 10 10">
                 <Image Source="{x:Bind Thumbnail, Mode=OneWay}" Height="95"  />
                 <Grid>
