--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -186,7 +186,7 @@
                 </interactivity:Interaction.Behaviors>
             </controls:AdaptiveGridView>
             
-            <Grid Width="280" Column="1" Visibility="{x:Bind ViewModel.IsDetailsShown, Mode=OneWay, 
+            <Grid Width="300" Column="1" Visibility="{x:Bind ViewModel.IsDetailsShown, Mode=OneWay, 
                 Converter={StaticResource BoolToVisibilityConverter}}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -199,43 +199,47 @@
                     </Style>
                 </Grid.Resources>
 
-                <Button HorizontalAlignment="Right" VerticalAlignment="Top">
-                    <FontIcon FontSize="12" Glyph="&#xE8BB;" />
-                </Button>
-
-                <ScrollViewer Grid.Row="0">
+                <ScrollViewer>
                     <StackPanel Padding="10 5">
 
-                        <Image Source="../../Resources/Folder.png" Height="100" Style="{StaticResource PanelItem}" />
+                        <Image Source="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.Thumbnail, Mode=OneWay}" Height="100" Style="{StaticResource PanelItem}" />
 
-                        <TextBlock Text="{x:Bind ViewModel.SelectedFileDetails.Name, Mode=OneWay}" Style="{StaticResource TitleTextBlockStyle}" 
+                        <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.Name, Mode=OneWay}" Style="{StaticResource TitleTextBlockStyle}" 
                            HorizontalAlignment="Center" 
                            Margin="0 6"
                            FontSize="25"/>
 
-                        <TextBlock Text="{x:Bind ViewModel.SelectedFileDetails.TitleInfo, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}" 
+                        <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.TitleInfo, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}" 
                            HorizontalAlignment="Center" 
                            Margin="0 6"/>
 
                         <StackPanel Style="{StaticResource PanelItem}" HorizontalAlignment="Stretch">
                             <TextBlock Style="{StaticResource BodyTextBlockStyle}"> Modification date</TextBlock>
-                            <TextBlock Text="{x:Bind ViewModel.SelectedFileDetails.ModifiedDate, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
+                            <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.ModifiedDate, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
                         </StackPanel>
 
                         <StackPanel Style="{StaticResource PanelItem}" HorizontalAlignment="Stretch">
                             <TextBlock Style="{StaticResource BodyTextBlockStyle}"> Creation date</TextBlock>
-                            <TextBlock Text="{x:Bind ViewModel.SelectedFileDetails.CreationTime, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
+                            <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.CreationTime, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
                         </StackPanel>
 
                         <StackPanel Style="{StaticResource PanelItem}" HorizontalAlignment="Stretch">
                             <TextBlock Style="{StaticResource BodyTextBlockStyle}"> Full path</TextBlock>
-                            <TextBlock Text="{x:Bind ViewModel.SelectedFileDetails.FullPath, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
+                            <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.FullPath, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
                         </StackPanel>
 
                     </StackPanel>
                 </ScrollViewer>
 
-                <Button Grid.Row="1" Style="{StaticResource PanelItem}" FontSize="16" HorizontalAlignment="Left" Padding="12 7">Open</Button>
+
+                <Button Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" 
+                        Command="{x:Bind ViewModel.CloseDetailsMenuCommand}">
+                    <FontIcon FontSize="12" Glyph="&#xE8BB;" />
+                </Button>
+
+                <Button Grid.Row="1" Style="{StaticResource PanelItem}" 
+                        FontSize="16" HorizontalAlignment="Left" Padding="12 7"
+                        Command="{x:Bind ViewModel.OpenSelectedItemCommand}">Open</Button>
             </Grid>
         </Grid>
 
