Created first version of menu flyout
Now user can right click any are inside of a grid view of items and depending on which item he chose a corresponding menu will pop up. User can even execute commands for a current directory

--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -176,11 +176,14 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <controls:AdaptiveGridView x:Name="DirectoryItemsGrid"
+                                       RightTapped="OnDirectoryItemsGridRightTapped"
                                        ItemsSource="{x:Bind ViewModel.DirectoryItems, Mode=OneWay}" 
                                        ItemTemplate="{StaticResource GridItemTemplate}"
                                        SelectionMode="Extended"
                                        DesiredWidth="160">
+                <MenuFlyout x:Name="ContextMenu">
 
+                </MenuFlyout>
                 <interactivity:Interaction.Behaviors>
                     <behaviors:MultiSelectionBehavior SelectedItems="{x:Bind ViewModel.SelectedItems, Mode=OneWay}" />
                 </interactivity:Interaction.Behaviors>
